update the syncing bar styling, fix slight shift on pane reload, remove standout styling for everything but orange cards, modified that to be pulse that terminates

--- a/app/styles/Table.scss
+++ b/app/styles/Table.scss
@@ -3,8 +3,19 @@
 #rows{
   width: 100%;
   padding: 0 0
+ 
 }
-
+/*
+#rows{
+  width: 98%;
+  padding: 0 15px;
+  border-radius: 15px;
+  margin: 3px 0;
+  @include themify($themes) {
+    background-color: themed('cardBackgroundColor');
+  }
+}
+*/
 .tableHeaderNormal{
   width: 100%;
   height:46px;
@@ -51,7 +62,7 @@
   margin: 0 0;
   width: 100%;
   min-height: 40px;
-  box-shadow: 0 2px 4px -3px rgba(0, 0, 0, 0.74);
+ /* box-shadow: 0 2px 4px -3px rgba(0, 0, 0, 0.74);*/
 }
 
 .tableRowCustom:active{
